<resources>
     <string name="urixml">http://10.13.37.86/Service.svc/</string>
     <string name="loadingMessage">Loading</string>
    <string name="no_internet">No internet connection!</string>
    <string name="logout_successful">Logged out!</string>
    <string name="checkout_successful">Checked out!</string>
    <string name="logging_in">Logging you in.</string>
    <string name="login_successful">Successfully logged in.</string>
    <string name="creating_account">Creating new account</string>
    <string name="registration_successful">Registration completed.</string>
    <string name="usernameHint">Username</string>
    <string name="error_invalid_username">Invalid username</string>
    <string name="goBack">Return to previous screen</string>
    <string name="no_search_results">There are no feeds available for those locations.</string>
    <string name="no_feed_options_selected">Please select at least one option.</string>
    <string name="feed_header">News Feed</string>
    <string name="no_checkin_options_selected">Please select an option.</string>
    <string name="app_name">CasApp</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_login">Login</string>
    <string name="action_checkout">Checkout</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_register">Don\'t have an account? Register here.</string>
    <string name="action_register_new_account">Register New Account</string>
    <string name="name_label">Name</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="email_label">E-mail Address</string>
    <string name="passwordconf_label">Password Confirmation</string>
    <string name="prompt_name">First and last name</string>
    <string name="prompt_username">Desired Username</string>
    <string name="register_progress_signing_in">Creating Account</string>
    <string name="error_invalid_confirmation">Passwords don\'t match.</string>
    <string name="error_name_short">Name is too short.</string>
    <string name="error_username_short">Username is too short.</string>
    <string name="feed_check">View Feed</string>
    <string name="feed_select">Select Feeds</string>
    <string name="feed_add">Receive New Feed</string>
    <string name="no_feeds_selected">Please add a feed in order to receive information.</string>
    <string name="add_feed_find">How do you want to find a new feed?</string>
    <string name="add_feed_location">Use your location</string>
    <string name="add_feed_manually">Search manually for Feeds</string>
    <string name="check_in_gps">Feeds around your location</string>
    <string name="feed_gpsResultsAdd">Add to Current Feeds</string>
    <string name="feed_manualAdd">Search for Feeds</string>
    <string name="search_results">Search Results</string>
    <string name="commentText">Comment text</string>
    <string name="origin">Origin</string>
    <string name="destination">Destination</string>
    <string name="originMyLocation">Origin: My Location</string>
    <string name="destinationMyLocation">Destination: My Location</string>
    <string name="separator">-</string>
    <string name="username">UserX</string>
    <string name="time">00:00</string>
    <string name="switch_text_yes">Show</string>
    <string name="switch_text_no">Hide</string>
    <string name="submit">Submit</string>
    <string name="notLoggedinComment">Please login in order to comment.</string>
    <string name="submitCommentTitle">Submit a Comment</string>
    <string name="notCheckedinComment">You must check-in on a vehicle in order to submit information about it.</string>
    <string name="checkin_manualAdd">Search for Options</string>
    <string name="checkin_useMyLocation">Use My Location</string>
    <string name="checkinButton">I\'m on this course</string>
    <string name="checkin_results_header">Search Results</string>
    <string name="atmosphere">Atmosphere</string>
    <string name="driver">Driver</string>
    <string name="vehicle">Vehicle</string>
    <string name="insertWrittenComment">Insert Written Comment</string>
    <string name="atmosphereTitle">Atmosphere</string>
    <string name="temperatureTitle">Temperature</string>
    <string name="temperatureValue">Adequate</string>
    <string name="noiseTitle">Noise</string>
    <string name="noiseValue">Normal</string>
    <string name="crowdingTitle">Crowding</string>
    <string name="crowdingValue">Normal</string>
    <string name="seatingTitle">Seating</string>
    <string name="seatingValue">Normal</string>
    <string name="cleanTitle">Cleanliness</string>
    <string name="cleanValue">Normal</string>
    <string name="sceneryTitle">Scenery</string>
    <string name="sceneryValue">Normal</string>
    <string name="securityTitle">Perceived Security</string>
    <string name="securityValue">Normal</string>
    <string name="smoothnessTitle">Smoothness</string>
    <string name="smoothnessValue">Normal</string>
    <string name="driverTitle">Driver</string>
    <string name="vehicleTitle">Vehicle Progress</string>
    <string name="speedTitle">Travel Speed</string>
    <string name="speedValue">Normal</string>
    <string name="delayTitle">Vehicle Delay</string>
    <string name="delayValue">On Schedule</string>
    <string name="courtesyTitle">Courtesy</string>
    <string name="courtesyValue">Normal</string>
    <string name="similarTitle">Similar Vehicle</string>
    <string name="similarValue">On Schedule</string>
    <string name="commentSendButton">Send</string>
    <string name="dismiss">Dismiss</string>
    <string name="trips_favourites">Favourites</string>
    <string name="trips_schedule">Schedule</string>
    <string name="tripsNotLoggedIn">Please login in order to access these features.</string>
    <string name="tripsLoginButton">Proceed to Login</string>
    <string name="addFavouriteButton">Add New Favourite</string>
    <string name="active">Active</string>
    <string name="addFavourite">Add a Favourite Course</string>
    <string name="FavouritesSearch">Search for Options</string>
    <string name="planNewTripButton">Plan New Trip</string>
    <string name="planNewTrip">Plan New Trip</string>
    <string name="searchScheduleButton">Search Trip Options</string>
    <string name="scheduleDatePick">Select Days of the Week</string>
    <string name="scheduleHourPick">Choose Hour</string>
    <string name="date">Mon-Fri</string>
    <string name="hour">18:00</string>
    <string name="schedule_results_header">Trip Options</string>
    <string name="scheduleButton">Add Trip to Schedule</string>
    <string name="profile_points">Points:</string>
    <string name="profile_privacy">Privacy Settings</string>
    <string name="profile_rewards">Claim Rewards</string>
    <string name="profile_desc">Profile Photo</string>
    <string name="profileChangePhotoButton">Change Photo</string>
    <string name="profileUsername">Placeholder</string>
    <string name="profile_num_points">0</string>
    <string name="profile_num_reputation">0</string>
    <string name="profileReputation">Reputation:</string>
    <string name="anonymous_mode">Anonymous Mode</string>
    <string name="user_statistics">User Statistics</string>
    <string name="submittedComments">Submitted Comments:</string>
    <string name="submittedCommentsNum">0</string>
    <string name="monthTrips">Trips this month:</string>
    <string name="monthTripsNum">0</string>
    <string name="claimReward">Claim</string>
    <string name="reward1Desc">50% off next month\'s travel card - 500 points</string>
    <string name="reward2Desc">30% off next month\'s travel card - 350 points</string>
    <string name="reward3Desc">20% off next month\'s travel card - 275 points</string>
    <string name="notLoggedinProfile">Please login in order to check your profile information.</string>
    <string name="profileLoginButton">Proceed to Login</string>
    <string name="title_activity_main_nav">MainNavActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_add_feed_by_gps">AddFeedByGpsActivity</string>
    <string name="title_activity_add_feed_manually">AddFeedManuallyActivity</string>
    <string-array name="temperature_array">
        <item>Freezing</item>
        <item>Cold</item>
        <item>Good</item>
        <item>Warm</item>
        <item>Hot</item>
    </string-array>
    <string-array name="temperature_rated_array">
        <item>This vehicle is freezing.</item>
        <item>This vehicle is cold.</item>
        <item>This vehicle has a good temperature.</item>
        <item>This vehicle is warm.</item>
        <item>This vehicle is hot.</item>
    </string-array>
    <string-array name="temperature_feed_array">
        <item>This vehicle is freezing.</item>
        <item>This vehicle is cold.</item>
        <item>This vehicle has a good temperature.</item>
        <item>This vehicle is warm.</item>
        <item>This vehicle is hot.</item>
    </string-array>
	<string-array name="noise_array">
        <item>Silent</item>
        <item>Calm</item>
        <item>Normal</item>
        <item>Noisy</item>
        <item>Loud</item>
    </string-array>
    <string-array name="noise_rated_array">
        <item>This vehicle is silent.</item>
        <item>This vehicle is calm.</item>
        <item>This vehicle is with normal noise.</item>
        <item>This vehicle is noisy.</item>
        <item>This vehicle is loud.</item>
    </string-array>
    <string-array name="noise_feed_array">
        <item>This vehicle is silent.</item>
        <item>This vehicle is calm.</item>
        <item>This vehicle is with normal noise.</item>
        <item>This vehicle is noisy.</item>
        <item>This vehicle is loud.</item>
    </string-array>
    <string-array name="crowding_array">
        <item>Empty</item>
        <item>Free space</item>
        <item>Half-full</item>
        <item>Tight</item>
        <item>Packed</item>
    </string-array>
    <string-array name="crowding_rated_array">
        <item>This vehicle is empty.</item>
        <item>This vehicle has free space.</item>
        <item>This vehicle is half-full.</item>
        <item>This vehicle is tight.</item>
        <item>This vehicle is packed.</item>
    </string-array>
    <string-array name="crowding_feed_array">
        <item>This vehicle is empty.</item>
        <item>This vehicle has free space.</item>
        <item>This vehicle is half-full.</item>
        <item>This vehicle is tight.</item>
        <item>This vehicle is packed.</item>
    </string-array>
    <string-array name="seating_array">
        <item>You wish</item>
        <item>No seats</item>
        <item>Few seats</item>
        <item>Some seats</item>
        <item>Many seats</item>
    </string-array>
    <string-array name="seating_rated_array">
        <item>This vehicle has no seats at all.</item>
        <item>This vehicle has no seats available.</item>
        <item>This vehicle has few seats available.</item>
        <item>This vehicle has some seats available.</item>
        <item>This vehicle has many seats available.</item>
    </string-array>
    <string-array name="seating_feed_array">
        <item>This vehicle has no seats at all.</item>
        <item>This vehicle has no seats available.</item>
        <item>This vehicle has few seats available.</item>
        <item>This vehicle has some seats available.</item>
        <item>This vehicle has many seats available.</item>
    </string-array>
</resources>