<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="250dip"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    >
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal"
        android:weightSum="3.3"
        android:layout_marginTop="7dp" >
        
    
        
        <TextView
            android:id="@+id/userName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:gravity="top|right"
            android:text="@string/username"
            android:textColor="@android:color/white"
            android:textSize="13sp"
            android:textStyle="bold" />
        
         <!-- <TextView
            android:id="@+id/separator1"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/separator"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold" /> -->
         
          <TextView
            android:id="@+id/feedItemOrigin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:gravity="center_vertical|right"
            android:text="@string/origin"
            android:textColor="@android:color/white"
            android:textSize="12sp"
             />
        
        <TextView
            android:id="@+id/separator2"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/separator"
            android:textColor="@android:color/white"
            android:textSize="12sp"
             />
        
        <TextView 
        android:id="@+id/feedItemDestination"
        android:text="@string/destination"
        android:layout_weight="1"
        android:textSize="12sp"
        
        android:layout_width="0dp"
        android:layout_marginLeft="15dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:gravity="center_vertical|left"
        />
         
    </LinearLayout>
    
    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <ImageView android:id="@+id/feedItemPhoto"
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:contentDescription="@string/profile_desc"
            android:src="@drawable/default_user"
            android:layout_marginLeft="40dp"
            ></ImageView>
        
        
        <TextView  android:id="@+id/feedItemComment"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:text="@string/commentText"
            android:maxLines="3"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_weight="30"/>
        
        <LinearLayout android:orientation="horizontal"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
             android:layout_weight="15"
             android:gravity="center_vertical">
            
             <Button android:id="@+id/feedItemLikeComment"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:gravity="center_vertical"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@drawable/arrow_down"
            />
         <Button android:id="@+id/feedItemDislikeComment"
            android:layout_marginLeft="5dp"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:gravity="center_vertical"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@drawable/arrow_up"/>
        </LinearLayout>
        
    </LinearLayout>
    
     <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="3.3"
        android:layout_marginBottom="7dp">

        <TextView
            android:id="@+id/feedItemTime"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.85"
            android:gravity="center_vertical|right"
            android:text="@string/time"
            android:textColor="@android:color/white"
            android:textSize="12sp"
             />

    </LinearLayout>
    
</LinearLayout>



