<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="70dip"
        android:gravity="center"
        android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/favouritesOrigin"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="14dp"
            android:layout_weight="33"
            android:gravity="center_vertical|right"
            android:text="@string/origin"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold" />
        
        <TextView
            android:id="@+id/favouritesSeparator"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/separator"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold" />
        
        <TextView 
        android:id="@+id/favouritesDestination"
        android:text="@string/destination"
        android:layout_weight="33"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_width="0dp"
        android:layout_marginLeft="15dp"
        android:layout_height="fill_parent"
        android:textColor="@android:color/white"
        android:gravity="center_vertical|left"
        />

        <CheckedTextView
            android:gravity="center_vertical"
            android:id="@+id/checkActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="25dp"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textColor="@android:color/white"
            android:text="@string/active"
            android:textSize="14sp" />
        
         
    </LinearLayout>
    
     <View 
           android:layout_marginTop="2dp"
		   android:layout_width="fill_parent"
		   android:layout_height="1dp"       
		   android:background="#33B5E5" />
     
     </LinearLayout>
