<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        
    	<LinearLayout
        android:id="@+id/register_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/register_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/register_progress_signing_in"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    
    
    

        <LinearLayout
            android:id="@+id/RegisterFormContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
            <TextView
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
                android:id="@+id/name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_label"
                android:textColor="@android:color/white" />
            
            <EditText
                android:id="@+id/nameRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_name"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white" />
            
            <TextView
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
                android:id="@+id/username_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_label"
                android:textColor="@android:color/white" />
            
            <EditText
                android:id="@+id/usernameRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_username"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white" />
            
            
            <TextView
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
                android:id="@+id/email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_label"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/emailRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white" />
            
            <TextView
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
                android:id="@+id/password_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_label"
                android:textColor="@android:color/white" />
            

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white" />
            
             <TextView
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
                android:id="@+id/passwordconf_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passwordconf_label"
                android:textColor="@android:color/white" />
            

            <EditText
                android:id="@+id/passwordConfirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white" />

            

        </LinearLayout>
        
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical" >  
            <Button
                android:id="@+id/register_account_button"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/button_selected"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/action_register_new_account" />
           </LinearLayout>
        
        

    </LinearLayout>