<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:id="@+id/notLoggedInComment"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
        android:layout_width="fill_parent"
        android:layout_height="350dp"
        android:gravity="center"
        android:maxLines="3"
        android:text="@string/notLoggedinComment"
        android:textColor="@android:color/white"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        
        android:textSize="16sp" >

   		</TextView>
    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="0dip"
	        android:layout_weight="1"
	        android:gravity="center|bottom"
	        android:orientation="vertical" >
	        
	        <Button android:id="@+id/CommentLoginButton"
	        android:layout_width="fill_parent"
	        android:layout_height="80dp"
	        android:background="@drawable/button_selected"
	        android:text="@string/profileLoginButton"
	        android:textStyle="bold"
	        android:textSize="16sp"></Button>
	        
	        </LinearLayout>    
	        
	    </LinearLayout>
	    
    	<LinearLayout
        android:id="@+id/notCheckedInComment"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
         >
	    
    	     <TextView
            android:id="@+id/submit_comment_header"
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/submitCommentTitle"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
	    
    	    <TextView
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:maxLines="3"
        android:text="@string/notCheckedinComment"
        android:textColor="@android:color/white"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        
        android:textSize="14sp" >

   		</TextView>
	        
	    </LinearLayout>
    
    
    

</LinearLayout>